Home component fix row/col sizing on smaller screens

--- a/Firebase-project/src/app/home/home.component.scss
+++ b/Firebase-project/src/app/home/home.component.scss
@@ -5,7 +5,8 @@
 }
 
 #secondRow {
-  height: 40vh;
+  height: 30vh;
+  margin-top: 30px;
 }
 
 
@@ -13,6 +14,11 @@
 @include media-breakpoint-down(sm) {
 
   #secondRow {
+    height: auto;
+    margin-top: 0px;
+  }
+
+  #firstRow {
     height: auto;
   }
 }
